samples/_failures_safe/1761317467_5b41d6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_403517e4.c: In function ‘main’:
./samples/SAFE/__tmp_403517e4.c:172:34: error: expected ‘)’ at end of input
  172 |     if (len > 0 && input[len - 1]
      |        ~                         ^
      |                                  )
./samples/SAFE/__tmp_403517e4.c:172:5: error: expected declaration or statement at end of input
  172 |     if (len > 0 && input[len - 1]
      |     ^~
